--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,3 @@
-//plugins {
-//    id 'com.android.application'
-//    id 'org.jetbrains.kotlin.android'
-//    id 'kotlin-kapt'
-//}
-
 apply {
     from "${project.rootDir.path}/buildApp.gradle"
 }
@@ -21,5 +15,7 @@ android {
 }
 
 dependencies {
-//    implementation project(Config.modules.base)
+
+    implementation project(Config.modules.base)
+
 }
