--- a/buildApp.gradle
+++ b/buildApp.gradle
@@ -18,7 +18,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        multiDexEnabled true
+        //默认关闭，超出65534再打开
+        multiDexEnabled false
+
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a"
         }
@@ -79,17 +81,16 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
-        encoding "UTF-8"
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '11'
+        jvmTarget = '1.8'
     }
-
     buildFeatures {
         viewBinding true
     }
+
 }
 
 
