--- a/libs/base-lib/build.gradle
+++ b/libs/base-lib/build.gradle
@@ -15,4 +15,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
+
 }
