--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "android-base"
 include ':app'
 include ':libs:base-lib'
+include ':libs:http-lib'
