--- a/libs/http-lib/build.gradle
+++ b/libs/http-lib/build.gradle
@@ -15,8 +15,11 @@ android {
 
 dependencies {
 
-    implementation Config.square.retrofit
-    implementation Config.square.okhttp
-    implementation Config.square.okio
+    Config.square.each {
+        implementation it.value
+    }
+//    implementation Config.square.retrofit
+//    implementation Config.square.okhttp
+//    implementation Config.square.okio
 
 }
