--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.base">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name=".App"
@@ -10,7 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidBaseLib">
+        android:theme="@style/Theme.AndroidBaseStyle">
 
         <activity
             android:name=".MainActivity"
@@ -25,6 +26,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity android:name=".RoundedActivity" />
 
     </application>
 
