--- a/buildApp.gradle
+++ b/buildApp.gradle
@@ -46,7 +46,7 @@ android {
     buildTypes {
         debug {
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
