--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,6 @@ dependencies {
         implementation project(it)
     }
 
-//    implementation Config.jetpack.navigation
-
-    implementation 'com.github.JavaNoober.BackgroundLibrary:libraryx:1.7.6'
+    implementation Config.commonView.background
 
 }
