--- a/libs/base-lib/src/main/AndroidManifest.xml
+++ b/libs/base-lib/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.pers.libs.base">
 
     <application android:networkSecurityConfig="@xml/network_security_config">
 
@@ -16,4 +16,5 @@
         </provider>
 
     </application>
+
 </manifest>
