--- a/libs/base-lib/build.gradle
+++ b/libs/base-lib/build.gradle
@@ -16,6 +16,8 @@ android {
 dependencies {
 
     implementation Config.jetpack.datastore
+    implementation Config.jetpack.lifecycle
+    kapt Config.jetpack.kapt_lifecycle
 
     implementation Config.commonView.background
 
