--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
 
 dependencies {
 
-    implementation project(Config.modules.base)
+    Config.modules.libs.each {
+        implementation project(it)
+    }
+
+    implementation Config.commonView.background
 
 }
