--- a/libs/base-lib/build.gradle
+++ b/libs/base-lib/build.gradle
@@ -15,7 +15,10 @@ android {
 
 dependencies {
 
-    implementation 'androidx.datastore:datastore-preferences:1.0.0'
-    implementation 'androidx.datastore:datastore-preferences-core:1.0.0'
+    implementation Config.jetpack.datastore
+    implementation Config.jetpack.lifecycle
+    kapt Config.jetpack.kapt_lifecycle
+
+    implementation Config.commonView.background
 
 }
