Revert "Wuyq/base (#1)"
This reverts commit 5b98a0fdd982ae1c9250279a0b553805e93bf932.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,6 @@ android {
 
 dependencies {
 
-    Config.modules.libs.each {
-        implementation project(it)
-    }
-
-    implementation Config.commonView.background
+    implementation project(Config.modules.base)
 
 }
