--- a/buildApp.gradle
+++ b/buildApp.gradle
@@ -5,9 +5,7 @@ apply {
 }
 
 android {
-
-    //
-//    namespace Config.applicationId
+    namespace Config.applicationId
     compileSdk Config.compileSdk
 
     defaultConfig {
@@ -48,14 +46,12 @@ android {
     buildTypes {
         debug {
             minifyEnabled true
-            zipAlignEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
         release {
             minifyEnabled true
-            zipAlignEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
