--- a/buildLibrary.gradle
+++ b/buildLibrary.gradle
@@ -5,7 +5,7 @@ apply {
 }
 
 android {
-
+    namespace Config.applicationId + suffix
     compileSdk Config.compileSdk
 
     println("namespace:" + namespace)
@@ -57,6 +57,13 @@ dependencies {
     implementation Config.packages.base
     testImplementation Config.packages.baseTest
     androidTestImplementation Config.packages.baseAndroidTest
+
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
+    implementation 'com.squareup.okio:okio:3.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
 }
 
