--- a/libs/net-lib/build.gradle
+++ b/libs/net-lib/build.gradle
@@ -15,6 +15,7 @@ android {
 
 dependencies {
 
+    implementation project(path: ':libs:base-lib')
     Config.square.each {
         implementation it.value
     }
