--- a/libs/net-lib/src/main/AndroidManifest.xml
+++ b/libs/net-lib/src/main/AndroidManifest.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.pers.libs.net">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 </manifest>
