--- a/buildApp.gradle
+++ b/buildApp.gradle
@@ -6,8 +6,6 @@ apply {
 
 android {
 
-    //
-//    namespace Config.applicationId
     compileSdk Config.compileSdk
 
     defaultConfig {
@@ -47,9 +45,9 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled true
-            zipAlignEnabled true
-            shrinkResources true
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
